Add existing project files to Git

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="Products">
             <div class="product">
-                <img src="https://i.pinimg.com/564x/af/c6/88/afc688001683a776358194f1bdd1bee3.jpg" alt="Product Image">
+                <img src="https://images.pexels.com/photos/9154696/pexels-photo-9154696.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Product Image">
                 <div class="product-info">
                     <h4>pro 1</h4>
                     <p>Lorem ipsum dolor sit amet cum.</p>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="https://i.pinimg.com/564x/af/c6/88/afc688001683a776358194f1bdd1bee3.jpg" alt="Product Image">
+                <img src="https://images.pexels.com/photos/2907034/pexels-photo-2907034.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Product Image">
                 <div class="product-info">
                     <h4>pro 2</h4>
                     <p>Lorem ipsum dolor sit amet cum.</p>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="product">
-                <img src="https://i.pinimg.com/564x/af/c6/88/afc688001683a776358194f1bdd1bee3.jpg" alt="Product Image">
+                <img src="https://images.pexels.com/photos/1390602/pexels-photo-1390602.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Product Image">
                 <div class="product-info">
                     <h4>pro 3</h4>
                     <p>Lorem ipsum dolor sit amet cum.</p>
@@ -53,7 +53,7 @@
             </div>
             <!-- New Product -->
             <div class="product">
-                <img src="https://i.pinimg.com/564x/af/c6/88/afc688001683a776358194f1bdd1bee3.jpg" alt="Product Image">
+                <img src="https://images.pexels.com/photos/10037708/pexels-photo-10037708.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Product Image">
                 <div class="product-info">
                     <h4>pro 4</h4>
                     <p>Lorem ipsum dolor sit amet cum.</p>
